# Splay-tree

./: CMakeLists.txt  README.md  SPLAY_ASSETS.7z  Splay_Tree.pptx  Splay_Trees.docx  main.cpp
Progress/: Menu.cpp  Menu.h  SFML.h  Splay.cpp  Splay.h  SplayTree.cpp  SplayTree.h  main  main.cpp  node.h  sfml.cpp  test.txt  testing.cpp
Progress/test/: test.txt
Progress/testing/: TESTS.cpp
TODO:/: .cpp
